# liltown

./: .gitignore  README.md  pyproject.toml
liltown/: __init__.py  __main__.py  characters.py  chat.py  cli.py  village.py
liltown.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_characters.py  test_chat.py
