[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liltown"
version = "0.1.0"
description = "A cozy terminal village where AI characters live, chat, and build relationships"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "rich>=13.0",
]

[project.scripts]
liltown = "liltown.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
